--- a/.config/hyprland-conf/waybar/style.css
+++ b/.config/hyprland-conf/waybar/style.css
@@ -1,13 +1,13 @@
 * {
     border: none;
     border-radius: 10px;
-    font-family: 'Sans-serif';
+    font-family: "Terminess Nerd Font", "sans-serif";
     font-size: 15px;
     min-height: 0;
 }
 
 window#waybar {
-    background: rgba(10, 10, 10, 0.1);
+    background: rgba(10, 10, 10, 0.4);
     color: #ffffff;
 }
 
@@ -42,7 +42,8 @@ window#waybar.hidden {
 #clock {
     padding: 0 10px;
     margin: 0 5px;
-    background-color: #780606;
+    background-color: rgba(120, 6, 6, 0.4);
+
 }
 
 #battery,
@@ -62,6 +63,7 @@ window#waybar.hidden {
 #custom-power{
     padding: 0 10px;
     margin: 0 5px;
+    background-color: rgba(120, 6, 6, 0.4);
 }
 
 #battery {
@@ -150,8 +152,13 @@ window#waybar.hidden {
 }
 #custom-media {
     background: transparent;
+    /*background-color: rgba(120, 6, 6, 0.4);*/
     padding: 0;
     border: none;
     font-size: 15px; /* adjust as needed */
     color: #ffffff; /* make sure the text is visible */
 }
+
+
+
+
